force-app/main/default/objects/Commission_Record__c/Commission_Record__c.object-meta.xml
<CustomObject>
    <description>Commission tracking per agent per month</description>
    <label>Commission Record</label>
    <nameField>
        <label>Commission Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>