force-app/main/default/objects/Commission_Record__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <label>Agent</label>
    <type>Lookup</type>
    <referenceTo>Agent__c</referenceTo>
    <relationshipLabel>Commission Records</relationshipLabel>
    <relationshipName>Commission_Records</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>