force-app/main/default/objects/Commission_Record__c/fields/Close_Rate__c.field-meta.xml
<CustomField>
    <fullName>Close_Rate__c</fullName>
    <label>Close Rate</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>