force-app/main/default/objects/Commission_Record__c/fields/Closed_Count__c.field-meta.xml
<CustomField>
    <fullName>Closed_Count__c</fullName>
    <label>Closed Count</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>