force-app/main/default/objects/Commission_Record__c/fields/Commission_Percent__c.field-meta.xml
<CustomField>
    <fullName>Commission_Percent__c</fullName>
    <label>Commission Percent</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>