force-app/main/default/objects/Commission_Record__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Calculated</fullName><default>false</default></value>
            <value><fullName>Approved</fullName><default>false</default></value>
            <value><fullName>Paid</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>